--- a/Source Code/Appointment App/app/src/main/res/layout/activity_admin_panel.xml
+++ b/Source Code/Appointment App/app/src/main/res/layout/activity_admin_panel.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activity.PatientPanelActivity">
+    tools:context=".activity.AdminPanelActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar"
@@ -43,17 +43,17 @@
                 android:gravity="center">
 
                 <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/patient_appointmentList"
+                    android:id="@+id/admin_doctorList"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layoutAnimation="@anim/layout_animation"
                     android:visibility="gone"
-                    tools:context=".activity.PatientPanelActivity"
+                    tools:context=".activity.AdminPanelActivity"
                     tools:listitem="@layout/list_appointment_item"
                     app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
                 <LinearLayout
-                    android:id="@+id/parent_no_schedule"
+                    android:id="@+id/parent_no_records"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
@@ -62,12 +62,12 @@
                     android:visibility="visible">
 
                     <ImageView
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
+                        android:layout_width="160dp"
+                        android:layout_height="100dp"
                         android:layout_margin="5dp"
                         android:alpha="0.4"
-                        android:scaleType="centerInside"
-                        android:src="@drawable/no_schedule"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/no_records_found"
                         android:contentDescription="@string/app_name"
                         app:tint="#11A31F"/>
 
@@ -77,7 +77,7 @@
                         android:layout_margin="5dp"
                         android:gravity="center"
                         android:alpha="0.4"
-                        android:text="@string/cdata_patient_no_schedule"
+                        android:text="@string/cdata_no_doctors"
                         android:textColor="#11A31F"
                         android:textAppearance="?android:textAppearanceSmall"
                         android:fontFamily="@font/poppins_light"/>
