--- a/Source Code/Appointment App/app/src/main/res/menu/menu_patient_doctor_admin_panel.xml
+++ b/Source Code/Appointment App/app/src/main/res/menu/menu_patient_doctor_admin_panel.xml
@@ -1,12 +1,18 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.appointment.app.PatientPanelActivity">
+    tools:context="com.appointment.app.activity.PatientPanelActivity">
 
     <item
         android:id="@+id/action_logout"
         android:orderInCategory="100"
         android:title="@string/action_logout"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_change_password"
+        android:orderInCategory="100"
+        android:title="@string/action_change_password"
         app:showAsAction="never" />
 
 </menu>
